2020-01-25  Per Arne Vollan  <pvollan@apple.com>

        [Cocoa] Media mime types map should be created in the UI process
        https://bugs.webkit.org/show_bug.cgi?id=206478

        Reviewed by Darin Adler.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKit/MimeTypes.mm: Added.
        (TEST):

2020-01-25  Antti Koivisto  <antti@apple.com>

        [LFC][Integration] Re-enable line layout integration
        https://bugs.webkit.org/show_bug.cgi?id=206795
        <rdar://problem/58853907>

        Reviewed by Zalan Bujtas.

        * DumpRenderTree/TestOptions.h:

2020-01-25  Youenn Fablet  <youenn@apple.com>

        HTMLMediaElement should not remove the media session at DOM suspension time
        https://bugs.webkit.org/show_bug.cgi?id=206661
        <rdar://problem/58800787>

        Reviewed by Eric Carlson.

        * TestWebKitAPI/Tests/WebKitLegacy/ios/ScrollingDoesNotPauseMedia.mm:
        (TestWebKitAPI::TEST):
        Suspend/resume Active DOM Objects from time to time as would do scrolling.
        This allows pending tasks to be executed asynchronously when not scrolling.

2020-01-23  Matt Lewis  <jlewis3@apple.com>

        Remove Apple windows 7 queues.
        https://bugs.webkit.org/show_bug.cgi?id=206702

        Reviewed by Jonathan Bedard.

        * BuildSlaveSupport/build.webkit.org-config/config.json:
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/WebKitBuildbot.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/Dashboard.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Styles/Main.css:
        * BuildSlaveSupport/build.webkit.org-config/steps_unittest.py:
        Removed Windows 7 queues from config and from dashboard.

2020-01-24  Per Arne Vollan  <pvollan@apple.com>

        Unreviewed, rolling out r255050.

        Introduced crashes on bots

        Reverted changeset:
