@@ -1,3 +1,13 @@
+2020-01-25  Aakash Jain  <aakash_jain@apple.com>
+
+        webkit-patch upload should not submit automatically to old EWS
+        https://bugs.webkit.org/show_bug.cgi?id=206801
+
+        Reviewed by Alexey Proskuryakov.
+
+        * Scripts/webkitpy/tool/commands/upload_unittest.py:
+        * Scripts/webkitpy/tool/steps/submittoews.py:
+
 2020-01-25  Per Arne Vollan  <pvollan@apple.com>
 
         [Cocoa] Media mime types map should be created in the UI process
